# shiny-colpali

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
core/: logging.py
models/: document.py
modules/: import_documents.py  process_documents.py  query_documents.py
