[tool.poetry]
name = "shiny-colpali"
version = "0.1.0"
description = ""
authors = ["cyan2k"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
shiny = "^1.0.0"
loguru = "*"
ruff = "*"
shinyswatch = "*"
byaldi = "*"
torch = [{ version = "2.4.1", source = "torch" }]


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.poetry.dev-dependencies]
ruff = "*"
pytest = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E203", "E266", "E501"]
exclude = ["logs/", "data/", "tests/", "docs/"]
